# steamos-efi

./: .gitignore  .gitlab-ci.yml  Makefile.am  README  README.bootconf  acinclude.m4  configure.ac
bash-completion/: steamcl-install  steamos-bootconf
bootconf/: bootconf.c  bootconf.h  config-extra.c  config-extra.h  efi.c  efi.h
chainloader/: bootload.c  bootload.h  chainloader.c  chainloader.h  config.c  config.h  console-ex.c  console-ex.h  console.c  console.h  debug.c  debug.h  err.c  err.h  exec.c  exec.h  fileio.c  fileio.h  input-events.c  key-log.c  partset.c  partset.h  usb-fn.h  usb-hc.h  usb-io.h  usb.c  usb.h  util.c  util.h  variable.c  variable.h
debian/: changelog  control  copyright  postinst  rules
util/: steamcl-install.in  steamcl-install.sh  steamcl-util.sh
